every page works

--- a/src/content/docs/en/islands/1-framework-components.mdx
+++ b/src/content/docs/en/islands/1-framework-components.mdx
@@ -1,7 +1,7 @@
 ---
-title: Astro Islands Tutorial - Astro to Island
+title: Astro Islands Tutorial - Framework components
 description: >-
-  Send data from Astro to your Islands.
+  Install and use Astro UI framework integrations.
 i18nReady: false
 ---
 import Badge from '~/components/Badge.astro';
@@ -19,18 +19,17 @@ import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
 <PreCheck>
-  - Send props to islands
-  - send children/nest islands using slots
-  - Use Astro.global stuff only in `.astro`
-
+  - Install an Astro integration
+  - Import and use a UI framework component
+  - Inspect network traffic using your browser's dev tools
 </PreCheck>
 
-CONTENT - unit topic
+CONTENT - import and include a framework component
 
 <Box icon="puzzle-piece">
-## Try it yourself - Passing Props and/or nesting slots (placeholder content)
+## Try it yourself - Add a component (placeholder content)
 
-Pass props/nest slots, following the [same steps as above]().
+Add a component, following the [same steps as above]().
 
 
 <details>
@@ -107,19 +106,17 @@ For each Astro template expression, can you predict the HTML (if any!) that will
     </p>
 </Box>
 
-
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I can pass serializable props from Astro to an island .
-- [ ] I use slots to nest islands within a `.astro` file.
-- [ ] I can access Astro global stuff in my `.astro` component.
+- [ ] I can install an Astro UI framework integration.
+- [ ] I can import and use framework components in a `.astro` file.
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Passing props to UI framework components](/en/core-concepts/framework-components/#passing-props-to-framework-components)
-- [Passing children to UI framework components](/en/core-concepts/framework-components/#passing-children-to-framework-components)
-- [Nesting framework UI components](/en/core-concepts/framework-components/#nesting-framework-components)
+- [Astro integrations](/en/guides/integrations-guide/)
+
+- [Using UI Framework components in Astro](/en/core-concepts/framework-components/)
