--- a/src/content/docs/en/islands/7-advanced-patterns.mdx
+++ b/src/content/docs/en/islands/7-advanced-patterns.mdx
@@ -1,7 +1,7 @@
 ---
-title: Astro Islands Tutorial - Server vs Client
+title: Astro Islands Tutorial - Advanced Patterns
 description: >-
-  Render code server-side and client-side
+  Use advanced Astro Island patterns.
 i18nReady: false
 ---
 import Badge from '~/components/Badge.astro';
@@ -19,8 +19,8 @@ import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
 <PreCheck>
-  - Run some code that renders only on the client-side
-  - something "real life" example
+  - Something technical
+  - something "real life" 
 
 </PreCheck>
 
@@ -52,20 +52,71 @@ unit task, following the [same steps as above]().
 
 ANY EXTRA CONTENT
 
+<Box icon="question-mark">
+### Test your knowledge
+
+1. The answer to this question is:
+    <MultipleChoice>
+        <Option isCorrect>A</Option>
+        <Option>B</Option>
+        <Option>C</Option>
+    </MultipleChoice>
+</Box>
+
+<Box icon="question-mark">
+
+### Analyze the Pattern
+
+Given the following `.astro` script:
+
+```astro title="src/pages/about.astro"
+---
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "boots";
+const student = false;
+---
+```
+
+
+For each Astro template expression, can you predict the HTML (if any!) that will be sent to the browser? Click to reveal if you're right!
+
+1.  `<p>{operatingSystem}</p>`
+
+    <p>
+      <Spoiler>`<p>Linux</p>`</Spoiler>
+    </p>
+
+2.  `{student && <p>I am still in school.</p>}`
+
+    <p>
+      <Spoiler>Nothing will display because `student` evaluates to false.</Spoiler>
+    </p>
+
+3.  `<p>I have {quantity + 8} pairs of {footwear}</p>`
+
+    <p>
+      <Spoiler>`<p>I have 11 pairs of boots</p>`</Spoiler>
+    </p>
+
+4.  `{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}`
+
+    <p>
+      <Spoiler>`<p>I am not using a Mac.</p>`</Spoiler>
+    </p>
+</Box>
+
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I can identify when an island's code renders on the server vs in the client
-- [ ] I can add client-side interactivity when necessary
+- [ ] I can do a technical thing.
+- [ ] I can do a real life example thing.
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Client:only Island rendering](/en/reference/directives-reference/#clientonly)
+- [Topic 1](/en/reference/directives-reference/#client-directives)
 
-- [Astro server-side frontmatter script](/en/core-concepts/astro-components/#the-component-script)
-
-- [Astro is server-first](/en/concepts/why-astro/#server-first)
-
+- [Topic 2](/en/guides/client-side-scripts/)
