--- a/src/content/docs/en/islands/4-server-vs-client.mdx
+++ b/src/content/docs/en/islands/4-server-vs-client.mdx
@@ -1,7 +1,7 @@
 ---
-title: Astro Islands Tutorial - Astro to Island
+title: Astro Islands Tutorial - Server vs Client
 description: >-
-  Send data from Astro to your Islands.
+  Render code server-side and client-side
 i18nReady: false
 ---
 import Badge from '~/components/Badge.astro';
@@ -19,18 +19,17 @@ import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
 <PreCheck>
-  - Send props to islands
-  - send children/nest islands using slots
-  - Use Astro.global stuff only in `.astro`
+  - Run some code that renders only on the client-side
+  - something "real life" example
 
 </PreCheck>
 
 CONTENT - unit topic
 
 <Box icon="puzzle-piece">
-## Try it yourself - Passing Props and/or nesting slots (placeholder content)
+## Try it yourself - unit task (placeholder content)
 
-Pass props/nest slots, following the [same steps as above]().
+unit task, following the [same steps as above]().
 
 
 <details>
@@ -112,14 +111,15 @@ For each Astro template expression, can you predict the HTML (if any!) that will
 ## Checklist
 
 <Checklist>
-- [ ] I can pass serializable props from Astro to an island .
-- [ ] I use slots to nest islands within a `.astro` file.
-- [ ] I can access Astro global stuff in my `.astro` component.
+- [ ] I can identify when an island's code renders on the server vs in the client
+- [ ] I can add client-side interactivity when necessary
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Passing props to UI framework components](/en/core-concepts/framework-components/#passing-props-to-framework-components)
-- [Passing children to UI framework components](/en/core-concepts/framework-components/#passing-children-to-framework-components)
-- [Nesting framework UI components](/en/core-concepts/framework-components/#nesting-framework-components)
+- [`Client:only` Island rendering](/en/reference/directives-reference/#clientonly)
+
+- [Astro server-side frontmatter script](/en/core-concepts/astro-components/#the-component-script)
+
+- [Astro is server-first](/en/concepts/why-astro/#server-first)
