--- a/src/content/docs/en/islands/5-data-fetching.mdx
+++ b/src/content/docs/en/islands/5-data-fetching.mdx
@@ -52,6 +52,60 @@ Fetching some data, somehow, following the [same steps as above]().
 
 ANY EXTRA CONTENT
 
+<Box icon="question-mark">
+### Test your knowledge
+
+1. The answer to this question is:
+    <MultipleChoice>
+        <Option isCorrect>A</Option>
+        <Option>B</Option>
+        <Option>C</Option>
+    </MultipleChoice>
+</Box>
+
+<Box icon="question-mark">
+
+### Analyze the Pattern
+
+Given the following `.astro` script:
+
+```astro title="src/pages/about.astro"
+---
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "boots";
+const student = false;
+---
+```
+
+
+For each Astro template expression, can you predict the HTML (if any!) that will be sent to the browser? Click to reveal if you're right!
+
+1.  `<p>{operatingSystem}</p>`
+
+    <p>
+      <Spoiler>`<p>Linux</p>`</Spoiler>
+    </p>
+
+2.  `{student && <p>I am still in school.</p>}`
+
+    <p>
+      <Spoiler>Nothing will display because `student` evaluates to false.</Spoiler>
+    </p>
+
+3.  `<p>I have {quantity + 8} pairs of {footwear}</p>`
+
+    <p>
+      <Spoiler>`<p>I have 11 pairs of boots</p>`</Spoiler>
+    </p>
+
+4.  `{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}`
+
+    <p>
+      <Spoiler>`<p>I am not using a Mac.</p>`</Spoiler>
+    </p>
+</Box>
+
 <Box icon="check-list">
 ## Checklist
 
