infra built! - next, LeftSidebar highlighting

--- a/src/content/docs/en/islands/0-introduction.mdx
+++ b/src/content/docs/en/islands/0-introduction.mdx
@@ -1,5 +1,6 @@
 ---
 title: Astro Islands Tutorial
+type: islands
 description: >-
   Learn the basics of Astro Islands with a project-based tutorial. 
 i18nReady: false
