--- a/src/content/docs/en/islands/1-framework-components.mdx
+++ b/src/content/docs/en/islands/1-framework-components.mdx
@@ -1,5 +1,6 @@
 ---
-title: Astro Islands Tutorial - Framework components
+title: Astro Islands Tutorial Framework components
+type: islands
 description: >-
   Install and use Astro UI framework integrations.
 i18nReady: false
