--- a/src/content/docs/en/islands/2-client-directives.mdx
+++ b/src/content/docs/en/islands/2-client-directives.mdx
@@ -1,7 +1,8 @@
 ---
-title: Astro Islands Tutorial - Astro to Island
+title: Astro Islands Tutorial Client Directives
+type: islands
 description: >-
-  Send data from Astro to your Islands.
+  Use client directives to hydrate Astro Islands. 
 i18nReady: false
 ---
 import Badge from '~/components/Badge.astro';
@@ -18,19 +19,19 @@ import Spoiler from '~/components/Spoiler.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
+
 <PreCheck>
-  - Send props to islands
-  - send children/nest islands using slots
-  - Use Astro.global stuff only in `.astro`
+  - Use `client:` directives to hydrate a framework component
+  - something "real life" related e.g. make your button work
 
 </PreCheck>
 
-CONTENT - unit topic
+CONTENT - Add various client directives to components
 
 <Box icon="puzzle-piece">
-## Try it yourself - Passing Props and/or nesting slots (placeholder content)
+## Try it yourself - Hydrate a component (placeholder content)
 
-Pass props/nest slots, following the [same steps as above]().
+Hydrate a component with a client directive, following the [same steps as above]().
 
 
 <details>
@@ -107,19 +108,17 @@ For each Astro template expression, can you predict the HTML (if any!) that will
     </p>
 </Box>
 
-
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I can pass serializable props from Astro to an island .
-- [ ] I use slots to nest islands within a `.astro` file.
-- [ ] I can access Astro global stuff in my `.astro` component.
+- [ ] I can add a client directive to control the hydration of each individual framework component.
+- [ ] I can add a script to a `.astro` file for interactivity, because it cannot use client directives.
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Passing props to UI framework components](/en/core-concepts/framework-components/#passing-props-to-framework-components)
-- [Passing children to UI framework components](/en/core-concepts/framework-components/#passing-children-to-framework-components)
-- [Nesting framework UI components](/en/core-concepts/framework-components/#nesting-framework-components)
+- [Client directives reference](/en/reference/directives-reference/#client-directives)
+
+- [Client-side scripts and event handling in Astro](/en/guides/client-side-scripts/)
