--- a/src/content/docs/en/islands/4-server-vs-client.mdx
+++ b/src/content/docs/en/islands/4-server-vs-client.mdx
@@ -1,5 +1,6 @@
 ---
-title: Astro Islands Tutorial - Server vs Client
+title: Astro Islands Tutorial Server vs Client
+type: islands
 description: >-
   Render code server-side and client-side
 i18nReady: false
