--- a/src/content/docs/en/islands/5-data-fetching.mdx
+++ b/src/content/docs/en/islands/5-data-fetching.mdx
@@ -1,5 +1,6 @@
 ---
-title: Astro Islands Tutorial - Data Fetching
+title: Astro Islands Tutorial Data Fetching
+type: islands
 description: >-
   Fetch data in your Astro islands 
 i18nReady: false
