--- a/src/content/docs/en/islands/6-styling-islands.mdx
+++ b/src/content/docs/en/islands/6-styling-islands.mdx
@@ -1,5 +1,6 @@
 ---
-title: Astro Islands Tutorial - Styling Islands
+title: Astro Islands Tutorial Styling Islands
+type: islands
 description: >-
   Style your islands inside framework components and globally. 
 i18nReady: false
