--- a/src/content/docs/en/islands/7-advanced-patterns.mdx
+++ b/src/content/docs/en/islands/7-advanced-patterns.mdx
@@ -1,5 +1,6 @@
 ---
-title: Astro Islands Tutorial - Advanced Patterns
+title: Astro Islands Tutorial Advanced Patterns
+type: islands
 description: >-
   Use advanced Astro Island patterns.
 i18nReady: false
