--- a/src/content/docs/en/islands/3-astro-to-island.mdx
+++ b/src/content/docs/en/islands/3-astro-to-island.mdx
@@ -1,7 +1,8 @@
 ---
-title: Astro Islands Tutorial - Client Directives
+title: Astro Islands Tutorial Astro to Island
+type: islands
 description: >-
-  Use client directives to hydrate Astro Islands. 
+  Send data from Astro to your Islands.
 i18nReady: false
 ---
 import Badge from '~/components/Badge.astro';
@@ -18,19 +19,19 @@ import Spoiler from '~/components/Spoiler.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
-
 <PreCheck>
-  - Use `client:` directives to hydrate a framework component
-  - something "real life" related e.g. make your button work
+  - Send props to islands
+  - send children/nest islands using slots
+  - Use Astro.global stuff only in `.astro`
 
 </PreCheck>
 
-CONTENT - Add various client directives to components
+CONTENT - unit topic
 
 <Box icon="puzzle-piece">
-## Try it yourself - Hydrate a component (placeholder content)
+## Try it yourself - Passing Props and/or nesting slots (placeholder content)
 
-Hydrate a component with a client directive, following the [same steps as above]().
+Pass props/nest slots, following the [same steps as above]().
 
 
 <details>
@@ -107,17 +108,19 @@ For each Astro template expression, can you predict the HTML (if any!) that will
     </p>
 </Box>
 
+
 <Box icon="check-list">
 ## Checklist
 
 <Checklist>
-- [ ] I can add a client directive to control the hydration of each individual framework component.
-- [ ] I can add a script to a `.astro` file for interactivity, because it cannot use client directives.
+- [ ] I can pass serializable props from Astro to an island .
+- [ ] I use slots to nest islands within a `.astro` file.
+- [ ] I can access Astro global stuff in my `.astro` component.
 </Checklist>
 </Box>
 
 ### Resources
 
-- [Client directives reference](/en/reference/directives-reference/#client-directives)
-
-- [Client-side scripts and event handling in Astro](/en/guides/client-side-scripts/)
+- [Passing props to UI framework components](/en/core-concepts/framework-components/#passing-props-to-framework-components)
+- [Passing children to UI framework components](/en/core-concepts/framework-components/#passing-children-to-framework-components)
+- [Nesting framework UI components](/en/core-concepts/framework-components/#nesting-framework-components)
