fix spelling astro-components.mdx

--- a/src/content/docs/ko/core-concepts/astro-components.mdx
+++ b/src/content/docs/ko/core-concepts/astro-components.mdx
@@ -8,7 +8,7 @@ i18nReady: true
 
 Astro 컴포넌트는 매우 유연합니다. 대부분의 경우 Astro 컴포넌트는 헤더나 프로필 카드와 같이 **페이지에서 재사용할 수 있는 가능한 UI**를 포함할 수 있습니다. 또한 SEO 작업을 쉽게 해주는 일반적인 `<meta>` 태그 모음과 같은 작은 HTML 스니펫을 포함할 수도 있습니다. Astro 컴포넌트는 전체 페이지 레이아웃을 포함할 수도 있습니다.
 
-Astro 컴포넌트에 대해 알아야 할 가장 중요한 점은 **클라이언트에서 렌더링되지 않는다는 것**입니다. 빌드 시점 혹은 [server-side-rendering (SSR)](/ko/guides/server-side-rendering/)을 통해 온디맨드 방식으로 HTML로 렌더링됩니다. 컴포넌트 프론트매터에 자바스크립트 코드를 포함할 수 있으며, 사용자의 브라우저로 전송되는 최종 페이지에서 모든 코드가 제거됩니다. 그 결과 기본적으로 자바스크립트 풋프린트가 전혀 추가되지 않아 사이트 속도가 빨라집니다.
+Astro 컴포넌트에 대해 알아야 할 가장 중요한 점은 **클라이언트에서 렌더링 되지 않는다는 것**입니다. 빌드 시점 혹은 [server-side-rendering (SSR)](/ko/guides/server-side-rendering/)을 통해 온디맨드 방식으로 HTML로 렌더링 됩니다. 컴포넌트 프론트매터에 자바스크립트 코드를 포함할 수 있으며, 사용자의 브라우저로 전송되는 최종 페이지에서 모든 코드가 제거됩니다. 그 결과 기본적으로 자바스크립트 풋프린트가 전혀 추가되지 않아 사이트 속도가 빨라집니다.
 
 Astro 컴포넌트에 클라이언트 측 상호 작용이 필요한 경우에는 [standard HTML `<script>` tags](/ko/guides/client-side-scripts/)나 [UI Framework components](/ko/core-concepts/framework-components/#hydrating-interactive-components)를 추가할 수 있습니다. 자세한 내용은 다음 링크에서 확인하세요.
 
@@ -60,7 +60,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 
 컴포넌트 템플릿은 코드 펜스 아래에 있으며 컴포넌트의 HTML 출력을 결정합니다.
 
-여기에 일반 HTML을 작성하면 해당 컴포넌트는 Astro 페이지에서 불러져 사용되는 경우 작성된 해당 HTML을 렌더링합니다.
+여기에 일반 HTML을 작성하면 해당 컴포넌트는 Astro 페이지에서 불려 사용되는 경우 작성된 해당 HTML을 렌더링합니다.
 
 그러나, [Astro’s component template syntax](/ko/core-concepts/astro-syntax/)은 **JavaScript 표현식**, Astro [`<style>`](/ko/guides/styling/#styling-in-astro)과 [`<script>`](/ko/guides/client-side-scripts/#using-script-in-astro) 태그들, **가져온 컴포넌트** 그리고, [**special Astro directives**](/ko/reference/directives-reference/)도 지원합니다. 컴포넌트 스크립트에서 정의한 데이터와 값을 컴포넌트 템플릿에 사용하여 페이지 빌드 시 동적으로 HTML을 생성할 수 있습니다.
 
@@ -136,7 +136,7 @@ const name = "Astro"
 <p>I hope you have a wonderful day!</p>
 ```
 
-`Props` 타입 인터페이스를 사용하여 TypeScript로 props를 정의할 수도 있습니다. Astro는 프론트매터에서 `Props` 인터페이스를 자동으로 선택하여 타입 경고나 오류를 표시합니다. props를 이용헤 `Astro.props`에서 디스트럭처링할 때 기본값을 지정할 수도 있습니다.
+`Props` 타입 인터페이스를 사용하여 TypeScript로 props를 정의할 수도 있습니다. Astro는 프론트매터에서 `Props` 인터페이스를 자동으로 선택하여 타입 경고나 오류를 표시합니다. props를 이용해 `Astro.props`에서 디스트럭처링할 때 기본값을 지정할 수도 있습니다.
 
 ```astro ins={3-6}
 ---
@@ -277,7 +277,7 @@ const { title } = Astro.props
 
 ## HTML 컴포넌트
 
-Astro는 `.html` 파일을 컴포넌트로 가져와서 사용하거나 `src/pages/` 하위 디렉토리에 페이지로 배치하는 기능을 지원합니다. 프레임워크 없이 구축된 기존 사이트의 코드를 재사용하고 싶거나, 컴포넌트에 동적인 기능이 들어가지 않도록 하려면 HTML 컴포넌트를 이용하는 것이 좋습니다.
+Astro는 `.html` 파일을 컴포넌트로 가져와서 사용하거나 `src/pages/` 하위 디렉터리에 페이지로 배치하는 기능을 지원합니다. 프레임워크 없이 구축된 기존 사이트의 코드를 재사용하고 싶거나, 컴포넌트에 동적인 기능이 들어가지 않도록 하려면 HTML 컴포넌트를 이용하는 것이 좋습니다.
 
 HTML 컴포넌트는 유효한 HTML만 포함할 수 있으며, 이로 인해 Astro 컴포넌트의 주요 기능이 제한됩니다.
 
