edit: organizing multi-collections

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -52,7 +52,7 @@ echo "\n.astro" >> .gitignore
 
 ### Organizing with multiple collections 
 
-If two files represent different kinds of content (e.g. a blog post and an author profile), they most likely belong in different collections. This is important because many features (frontmatter validation, automatic TypeScript type-safety) require that all entries in a collection share a similar frontmatter structure.
+If two files represent different kinds of content (e.g. a blog post and an author profile), they most likely belong in different collections. This is important because many features (frontmatter validation, automatic TypeScript type-safety) require that all entries in a collection share a similar structure.
 
 If you find yourself working with different types of content, you should create multiple collections to represent each type. You can create as many different collections in your project as you'd like.
 
@@ -62,10 +62,10 @@ If you find yourself working with different types of content, you should create 
     - week-1.md
     - week-2.md
     - week-3.md
-  - **authors/** split different content types into new collections
-    - grace-hopper.md
-    - alan-turing.md
-    - batman.md
+  - **authors/**
+    - grace-hopper.json
+    - alan-turing.json
+    - batman.json
 </FileTree>
 
 
