edit: defining collections

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -134,28 +134,31 @@ If you use `.js` or `.mjs` files in an Astro project, you can enable IntelliSens
 
 ### Defining a collection schema
 
-Schemas enforce consistent frontmatter within a collection. A schema **guarantees** that your frontmatter exists in a predictable form when you need to reference or query it. If any file violates its collection schema, Astro will provide a helpful error to let you know.
+Schemas enforce consistent frontmatter or entry data within a collection. A schema **guarantees** that this data exists in a predictable form when you need to reference or query it. If any file violates its collection schema, Astro will provide a helpful error to let you know.
 
 Schemas also power Astro's automatic TypeScript typings for your content. When you define a schema for your collection, Astro will automatically generate and apply a TypeScript interface to it. The result is full TypeScript support when you query your collection, including property autocompletion and type-checking. 
 
-To create your first content schema, create a `src/content/config.ts` file if one does not already exist (`.js` and `.mjs` extensions are also supported). This file should:
+To define your first collection, create a `src/content/config.ts` file if one does not already exist (`.js` and `.mjs` extensions are also supported). This file should:
 
-1. Import the proper utilities from `astro:content`. 
-2. Define each collection that you'd like to validate with a schema.
-3. Export a single `collections` object to register your collections.
+1. **Import the proper utilities** from `astro:content`. 
+2. **Define each collection that you'd like to validate.** This includes a `type` specifying whether the collection contains content authoring formats like Markdown (`type: 'content'`) or data formats like JSON or YAML (`type: 'data'`). It also includes a `schema` that defines the shape of your frontmatter or entry data.
+3. **Export a single `collections` object** to register your collections.
 
 ```ts
 // src/content/config.ts
 // 1. Import utilities from `astro:content`
 import { z, defineCollection } from 'astro:content';
-// 2. Define a schema for each collection you'd like to validate.
+
+// 2. Define a `type` and `schema` for each collection you'd like to validate.
 const blogCollection = defineCollection({
+  type: 'content',
   schema: z.object({
     title: z.string(),
     tags: z.array(z.string()),
     image: z.string().optional(),
   }),
 });
+
 // 3. Export a single `collections` object to register your collection(s)
 export const collections = {
   'blog': blogCollection,
