edit: add types to defining multi-collections

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -172,9 +172,18 @@ You can use `defineCollection()` as many times as you want to create multiple sc
 ```ts
 // src/content/config.ts
 export const collections = {
-  'blog': defineCollection({ /* ... */ }),
-  'newsletter': defineCollection({ /* ... */ }),
-  'profile-authors': defineCollection({ /* ... */ }),
+  'blog': defineCollection({
+    type: 'content',
+    schema: z.object({ /* ... */ })
+  }),
+  'newsletter': defineCollection({
+    type: 'content',
+    schema: z.object({ /* ... */ })
+  }),
+  'authors': defineCollection({
+    type: 'data',
+    schema: z.object({ /* ... */ })
+  }),
 };
 ```
 
