edit: add more types to defining multi-collections

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -194,9 +194,17 @@ As your project grows, you are also free to reorganize your codebase and move lo
 // 1. Import your utilities and schemas
 import { defineCollection } from 'astro:content';
 import {blogSchema, newsletterSchema} from '../schemas';
+
 // 2. Define your collections
-const blogCollection = defineCollection({ schema: blogSchema });
-const newsletterCollection = defineCollection({ schema: newsletterSchema });
+const blogCollection = defineCollection({
+  type: 'content',
+  schema: blogSchema,
+});
+const newsletterCollection = defineCollection({
+  type: 'content',
+  schema: newsletterSchema,
+});
+
 // 3. Export multiple collections to register them
 export const collections = {
   'blog': blogCollection,
