edit: one more `type: 'content'`

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -220,7 +220,8 @@ You can import collection schemas from anywhere, including external npm packages
 ```ts
 // src/content/config.ts
 import {blogSchema} from 'my-blog-theme';
-const blogCollection = defineCollection({ schema: blogSchema });
+const blogCollection = defineCollection({ type: 'content', schema: blogSchema });
+
 // Export the blog collection, using an external schema from 'my-blog-theme'
 export const collections = {
   'blog': blogCollection,
