edit: getEntryBySlug() -> getEntry()

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -282,7 +282,7 @@ Your blog post content here.
 
 ## Querying Collections
 
-Astro provides two functions to query a collection and return one (or more) content entries: [`getCollection()`](/en/reference/api-reference/#getcollection) and [`getEntry()`](/en/reference/api-reference/#getentrybyslug).
+Astro provides two functions to query a collection and return one (or more) content entries: [`getCollection()`](/en/reference/api-reference/#getcollection) and [`getEntry()`](/en/reference/api-reference/#getentry).
 
 ```js
 import { getCollection, getEntry } from 'astro:content';
@@ -379,8 +379,8 @@ Once queried, you can render a collection entry to HTML using the entry `render(
 ```astro {5}
 ---
 // src/pages/render-example.astro
-import { getEntryBySlug } from 'astro:content';
-const entry = await getEntryBySlug('blog', 'post-1');
+import { getEntry } from 'astro:content';
+const entry = await getEntry('blog', 'post-1');
 const { Content, headings } = await entry.render();
 ---
 <p>Written by: {entry.data.author}</p>
@@ -423,20 +423,20 @@ This will generate a new page for every entry in the `blog` collection. For exam
 
 ### Building for server output (SSR)
 
-If you are building a dynamic website (using Astro's SSR support), you are not expected to generate any paths ahead-of-time during the build. Instead, your page should examine the request (using `Astro.request` or `Astro.params`) to find the `slug` on-demand, and then fetch it using [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug). 
+If you are building a dynamic website (using Astro's SSR support), you are not expected to generate any paths ahead-of-time during the build. Instead, your page should examine the request (using `Astro.request` or `Astro.params`) to find the `slug` on-demand, and then fetch it using [`getEntry()`](/en/reference/api-reference/#getentry). 
 
 
 ```astro
 ---
 // src/pages/posts/[...slug].astro
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 // 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
 if (slug === undefined) {
 	throw new Error("Slug is required");
 }
 // 2. Query for the entry directly using the request slug
-const entry = await getEntryBySlug("blog", slug);
+const entry = await getEntry("blog", slug);
 // 3. Redirect if the entry does not exist
 if (entry === undefined) {
 	return Astro.redirect("/404");
@@ -596,7 +596,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     ```
 
     :::note
-    Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
+    Any individual Markdown or MDX file imports should be replaced by [`getEntry()`](/en/reference/api-reference/#getentry).
     :::
     
 8. Update the code that uses the publish date in the `layouts/MarkdownPostLayout.astro` file.
@@ -651,8 +651,8 @@ Astro supports remark or rehype plugins that [modify your frontmatter directly](
 
 ```astro "{ remarkPluginFrontmatter }"
 ---
-import { getEntryBySlug } from 'astro:content';
-const blogPost = await getEntryBySlug('blog', 'post-1');
+import { getEntry } from 'astro:content';
+const blogPost = await getEntry('blog', 'post-1');
 const { remarkPluginFrontmatter } = await blogPost.render();
 ---
 <!-- 
@@ -663,5 +663,5 @@ const { remarkPluginFrontmatter } = await blogPost.render();
 <p>{blogPost.data.title} — {remarkPluginFrontmatter.readingTime}</p>
 ```
 
-The remark and rehype pipelines only runs when your content is rendered, which explains why `remarkPluginFrontmatter` is only available after you call `render()` on your content entry.  In contrast, `getCollection()` and `getEntryBySlug()` cannot return these values directly because they do not render your content.
+The remark and rehype pipelines only runs when your content is rendered, which explains why `remarkPluginFrontmatter` is only available after you call `render()` on your content entry.  In contrast, `getCollection()` and `getEntry()` cannot return these values directly because they do not render your content.
 
