edit: one last `type: 'content'`

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -463,6 +463,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     import { z, defineCollection } from "astro:content";
     // Define a schema for each collection you'd like to validate.
     const postsCollection = defineCollection({
+        type: 'content',
         schema: z.object({
           title: z.string(),
           pubDate: z.date(),
