edit: update define instruction comments

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -149,7 +149,7 @@ To define your first collection, create a `src/content/config.ts` file if one do
 // 1. Import utilities from `astro:content`
 import { z, defineCollection } from 'astro:content';
 
-// 2. Define a `type` and `schema` for each collection you'd like to validate.
+// 2. Define a `type` and `schema` for each collection
 const blogCollection = defineCollection({
   type: 'content',
   schema: z.object({
@@ -461,7 +461,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     ```ts title="src/content/config.ts"
     // Import utilities from `astro:content`
     import { z, defineCollection } from "astro:content";
-    // Define a schema for each collection you'd like to validate.
+    // Define a `type` and `schema` for each collection
     const postsCollection = defineCollection({
         type: 'content',
         schema: z.object({
