edit: add data collection example

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -193,22 +193,22 @@ As your project grows, you are also free to reorganize your codebase and move lo
 // src/content/config.ts
 // 1. Import your utilities and schemas
 import { defineCollection } from 'astro:content';
-import {blogSchema, newsletterSchema} from '../schemas';
+import {blogSchema, authorSchema} from '../schemas';
 
 // 2. Define your collections
 const blogCollection = defineCollection({
   type: 'content',
   schema: blogSchema,
 });
-const newsletterCollection = defineCollection({
-  type: 'content',
-  schema: newsletterSchema,
+const authorCollection = defineCollection({
+  type: 'data',
+  schema: authorSchema,
 });
 
 // 3. Export multiple collections to register them
 export const collections = {
   'blog': blogCollection,
-  'newsletter': newsletterCollection,
+  'authors': authorCollection,
 };
 ```
 
