edit: better reference example

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -268,7 +268,7 @@ defineCollection({
 
 ### Defining collection references
 
-Collection entries can also "reference" other related entries. A common example is a blog post that references an author stored in an `authors` collection, or other related posts stored in the same collection.
+Collection entries can also "reference" other related entries. A common example is a blog post that references reusable author profiles stored as JSON, or related post URLs stored in the same collection.
 
 You can define these relationships using the `reference()` utility from your collection schema. This accepts a collection name, and validates the entry identifier(s) specified in your content frontmatter or data file.
 
