new: "resolving references" section

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -344,7 +344,34 @@ const oneBlogPost = await getEntry('authors', 'grace-hopper');
 
 Both functions return content entries as defined by the [`CollectionEntry`](/en/reference/api-reference/#collection-entry-type) type.
 
-#### Filtering collection queries
+### Resolving references
+
+When using [collection references](#defining-collection-references), you can use the `getEntry()` and `getEntries()` functions to retrieve the referenced `data`. 
+
+```astro title="src/pages/blog/welcome.astro"
+---
+import { getEntry, getEntries } from 'astro:content';
+
+const { data } = await getEntry('blog', 'welcome');
+
+// Resolve a singular reference
+const author = await getEntry(data.author);
+// Resolve an array of references
+const relatedPosts = await getEntries(data.relatedPosts);
+---
+
+<h1>{blogPost.data.title}</h1>
+<p>Authors: {authors.map(a => a.data.name).join(', ')}</p>
+
+<!-- ... -->
+
+<h2>You might also like:</h2>
+{relatedPosts.map(p => (
+  <a href={p.slug}>{p.data.title}</a>
+))}
+```
+
+### Filtering collection queries
 
 `getCollection()` takes an optional "filter" callback that allows you to filter your query based on an entry's `id`, `slug`, or `data` (frontmatter) properties.
 
