nit: data -> entry data

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -346,7 +346,7 @@ Both functions return content entries as defined by the [`CollectionEntry`](/en/
 
 ### Resolving references
 
-When using [collection references](#defining-collection-references), you can use the `getEntry()` and `getEntries()` functions to retrieve the referenced `data`. 
+When using [collection references](#defining-collection-references), you can use the `getEntry()` and `getEntries()` functions to retrieve the referenced entry `data`. 
 
 ```astro title="src/pages/blog/welcome.astro"
 ---
