new: `type` API reference

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -733,6 +733,7 @@ Content collections offer APIs to configure and query your Markdown or MDX docum
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
+  type: 'content',
   schema: z.object({
     title: z.string(),
     permalink: z.string().optional(),
@@ -745,6 +746,22 @@ export const collections = { blog };
 ```
 
 This function accepts the following properties:
+
+#### `type`
+
+<Since v="2.5" />
+
+**Type:** `'content' | 'data'`  
+**Default:** `'content'`
+
+`type` is a string that defines the type of entries stored within a collection:
+
+- `'content'` - for content authoring formats like Markdown (`.md`), MDX (`.mdx`), or Markdoc (`.mdoc`)
+- `'data'` - for data-only formats like JSON (`.json`) or YAML (`.yaml`)
+
+:::tip
+This means collections **cannot** store a mix of content and data formats. If you find the need, Astro recommends splitting these entries into separate collections with a shared [schema](#schema).
+:::
 
 #### `schema`
 
