new: `getEntry()` and `getEntries()` API reference

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -795,9 +795,74 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 
 [See the `Content Collection` guide](/en/guides/content-collections/#querying-collections) for example usage.
 
+### `getEntry()`
+
+<Since v="2.5" />
+
+**Types:**
+
+- `(collection: string, contentSlugOrDataId: string) => CollectionEntry<collection>`
+- `({ collection: string, id: string }) => CollectionEntry<collection>`
+- `({ collection: string, slug: string }) => CollectionEntry<collection>`
+
+`getEntry()` is a function that retrieves a single collection entry by collection name and either the entry `id` (for JSON or YAML collections) or entry `slug` (for Markdown or MDX collections).
+
+```astro
+---
+import { getEntry } from 'astro:content';
+
+// Get `src/content/blog/enterprise.md`
+const enterprisePost = await getEntry('blog', 'enterprise');
+
+// Get `src/content/captains/captain-kirk.yaml`
+const captainProfile = await getEntry('captains', 'captain-kirk');
+---
+```
+
+`getEntry()` can also be used to get referenced entries to access the `data`, `body`, or `render()` properties:
+
+```astro
+---
+import { getEntry } from 'astro:content';
+
+const enterprisePost = await getEntry('blog', 'enterprise);
+
+// Get the profile referenced by `data.captain`
+const captainProfile = await getEntry(enterprise.data.captain);
+---
+```
+
+See the `Content Collection` guide for examples of [querying](/en/guides/content-collections/#querying-collections) and [references](/en/guides/content-collections/#resolving-references).
+
+### `getEntries()`
+
+<Since v="2.5" />
+
+**Types:**
+
+- `(Array<{ collection: string, id: string }>) => CollectionEntry<collection>`
+- `(Array<{ collection: string, slug: string }>) => CollectionEntry<collection>`
+
+`getEntries()` is a function that retrieves multiple collection entries with the same collection name. This is useful for resolving an array of [references](en/guides/content-collections/#defining-collection-references) to their associated `data`, `body`, and `render()` properties.
+
+```astro
+---
+import { getEntries } from 'astro:content';
+
+const enterprisePost = await getEntry('blog', 'enterprise);
+
+// Get related posts referenced by `data.relatedPosts`
+const captainProfile = await getEntries(enterprise.data.relatedPosts);
+---
+```
+
 ### `getEntryBySlug()`
 
 **Type:** `(collection: string, slug: string) => CollectionEntry<collection>`
+
+:::note
+Astro recommends using the new `getEntry()` function. This accepts the same arguments as `getEntryBySlug()`, and supports querying by `id` for JSON or YAML collections.
+:::
 
 `getEntryBySlug()` is a function that retrieves a single collection entry by collection name and entry `slug`.
 
